--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-11-client",
+  "name": "name-of-your-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "daisyui": "^2.51.6",
-    "firebase": "^9.22.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "sort-by": "^1.2.0"
+    "react-tabs": "^6.0.1",
+    "sort-by": "^1.2.0",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
