--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
